samples/_failures_safe/1761081781_a9ddf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caf81b7b.c: In function ‘main’:
./samples/SAFE/__tmp_caf81b7b.c:165:5: error: expected declaration or statement at end of input
  165 |     return 0;
      |     ^~~~~~
